<resources>
    <string name="app_name">Kwento</string>
    <string name="slogan">Entertain Your Kids with Kwento</string>
    <string name="copyright">© Ruban Creations</string>
    <string name="tips_menu">Tips</string>
    <string name="privacy_policy">Privacy and Terms</string>
    <string name="share_menu">Share</string>
    <string name="search_menu">Search</string>
    <string name="visit_website_menu">Developer site</string>
    <string name="feedback_menu">Feedback</string>
    <string name="exit_menu">Exit</string>
    <string-array name="storyTitles">
        <item>Lion and The Mouse</item>
        <item>Count Wisely</item>
        <item>The Boy Who Cried Wolf</item>
        <item>The Fox and The Stork</item>
        <item>The Golden Touch</item>
        <item>The Milkmaid and Her Pail</item>
        <item>When Adversity Knocks</item>
        <item>The Proud Rose</item>
        <item>The Tale of the Pencil</item>
        <item>The Crystal Ball</item>
        <item>A Bundle of Sticks</item>
        <item>The Ant and The Dove</item>
        <item>The Fox and The Grapes</item>
        <item>The Ant and The Grasshopper</item>
        <item>The Bear and The Two Friends</item>
        <item>Friends Forever</item>
        <item>The Elephant and Her Friends</item>
        <item>The Wood cutter and The Golden Axe</item>
        <item>The Needle Tree</item>
        <item>The Greedy Lion</item>
    </string-array>
    <string-array name="storyNumber">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>